--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@xyflow/react": "^12.9.2",
+    "ai": "^5.0.86",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
