fix: update environment configuration for NIM provider by renaming base URL and API key variables, and adding embed API details

--- a/server/env.example
+++ b/server/env.example
@@ -2,9 +2,11 @@
 AI_PROVIDER=nim
 
 # NVIDIA NIM (OpenAI-compatible over SageMaker or NVIDIA public)
-NIM_OPENAI_BASE_URL=https://<sagemaker-endpoint-or-nvidia>/v1
-NIM_OPENAI_API_KEY=dummy-required
+NIM_BASE_URL=https://<sagemaker-endpoint-or-nvidia>/v1
+NIM_API_KEY=dummy-required
 NIM_MODEL=meta/llama-3.1-8b-instruct
+NIM_EMBED_BASE_URL=https://<sagemaker-endpoint-or-nvidia>/v1
+NIM_EMBED_API_KEY=dummy-required
 NIM_EMBED_MODEL=NV-Embed-QA
 
 # Retrieval
