--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,7 +55,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./client/nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - webroot:/usr/share/nginx/html
     restart: unless-stopped
 
