--- a/server/env.example
+++ b/server/env.example
@@ -1,13 +1,18 @@
 # AI Provider
 AI_PROVIDER=nim
 
-# NVIDIA NIM (OpenAI-compatible over SageMaker or NVIDIA public)
-NIM_BASE_URL=https://<sagemaker-endpoint-or-nvidia>/v1
+# NVIDIA NIM LLM (OpenAI-compatible - deployed on EKS or public endpoint)
+# For EKS deployment: http://<loadbalancer-dns>:8000/v1
+# For public endpoint: https://integrate.api.nvidia.com/v1
+NIM_BASE_URL=http://<loadbalancer-dns>:8000/v1
 NIM_API_KEY=dummy-required
-NIM_MODEL=meta/llama-3.1-8b-instruct
-NIM_EMBED_BASE_URL=https://<sagemaker-endpoint-or-nvidia>/v1
-NIM_EMBED_API_KEY=dummy-required
-NIM_EMBED_MODEL=NV-Embed-QA
+NIM_MODEL=nvidia/llama-3.1-nemotron-nano-8b-v1
+
+# NVIDIA Embeddings (Public API - recommended)
+# Get API key from: https://build.nvidia.com/settings/api-keys
+NIM_EMBED_BASE_URL=https://integrate.api.nvidia.com/v1
+NIM_EMBED_API_KEY=nvapi-<your-api-key-here>
+NIM_EMBED_MODEL=nvidia/llama-3.2-nv-embedqa-1b-v2
 
 # Retrieval
 RETRIEVE_TOP_K=4
