--- a/client/package.json
+++ b/client/package.json
@@ -23,9 +23,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.552.0",
+    "marked": "^17.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.6",
+    "remark-gfm": "^4.0.1",
     "shiki": "^3.14.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.16"
