--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "@ai-sdk/openai-compatible": "^1.0.24",
     "@chroma-core/default-embed": "^0.1.8",
     "@chroma-core/ollama": "^0.1.7",
+    "@openrouter/ai-sdk-provider": "^1.2.2",
     "ai": "^5.0.82",
     "ai-sdk-ollama": "^1.0.0",
     "chromadb": "^3.1.0",
